[package]
name = "perlin_rust"
version = "0.0.1"
edition = "2021"
keywords = ["noise","perlin"]
license = "MIT"
repository = "https://github.com/jordan4ibanez/perlin_rust"
description = "A simple perlin noise implementation in Rust"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
